# backend/routes/api.php
@@ -22,22 +22,25 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::post('/signup', [UserController::class, 'store'])->name('signup');
 Route::post('/login', [UserController::class, 'login'])->name('login');
 
-Route::group(['middleware'=> 'jwt.verify'],function () {
+Route::group(['middleware'=> 'jwt.verify'], function () {
+    Route::prefix('/usuarios')->get('/{id}', [UserController::class, 'show'])->name('usuarios.perfil');
+    // Route::get('/id', [UserController::class, 'id'])->name('id');
+
+
     Route::post('/logout', [UserController::class, 'logout'])->name('users.logout');
-  });
+
+    Route::prefix('comments')->name('comments.')->group(function () {
+        Route::get('', [CommentController::class, 'index'])->name('lista');
+        Route::post('', [CommentController::class, 'store'])->name('criar');
+        Route::get('/{id}', [CommentController::class, 'show'])->name('mostrar');
+        Route::put('/{id}', [CommentController::class, 'update'])->name('atualizar');
+        Route::delete('/{id}', [CommentController::class, 'destroy'])->name('deletar');
+    });
+});
 
 Route::prefix('/usuarios')->name('usuarios.')->group(function () {
     Route::get('', [UserController::class, 'index'])->name('lista');
-    Route::get('/{id}', [UserController::class, 'show'])->name('perfil');
     Route::put('/{id}', [UserController::class, 'update'])->name('atualizar');
     Route::delete('/{id}', [UserController::class, 'destroy'])->name('deletar');
+    Route::get('/{id}/nome', [UserController::class, 'getUserName']);
 });
-
-Route::prefix('comments')->name('comments.')->group(function () {
-    Route::get('', [CommentController::class, 'index'])->name('lista');
-    Route::post('', [CommentController::class, 'store'])->name('criar');
-    Route::get('/{id}', [CommentController::class, 'show'])->name('mostrar');
-    Route::put('/{id}', [CommentController::class, 'update'])->name('atualizar');
-    Route::delete('/{id}', [CommentController::class, 'destroy'])->name('deletar');
-});
-
